--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <!-- Меню -->
@@ -16,11 +17,11 @@
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link-current" href="">Гостинницы</a>
+            <a class="navigation-link-current">Гостинницы</a>
           </li>
         </ul>
         <a class="logo" href="index.html">
-          <img src="" class="logo-img" alt="Логотип Седона">
+          <img src="images/sedona.svg" class="logo-img" alt="Логотип Седона">
         </a>
         <ul class="navigation-list navigation-user" >
           <li class="navigation-item">
@@ -43,6 +44,7 @@
         </ul>
       </nav>
     </header>
+
     <main class="main-hotels">
       <header class="hotels-heder">
         <h1 class="hotels-heder-title">
@@ -156,13 +158,13 @@
         <a href="#" class="buttom buttom-list">
           <span class="visually-hidden">Показать список</span>
         </a>
-
+<!-- каталог -->
         <ul class="hotels-list">
           <li class="hotels-card">
-            <a class="hotels-card-link" href="#">
-              <img class="hotels-card-img" src="" alt="Гостиница Amara Resort & Spa">
+            <a class="hotels-card__img-link" href="#">
+              <img class="hotels-card-img" src="images/content/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
             </a>
-            <a class="hotels-card-link" href="#">
+            <a class="hotels-card__link" href="#">
               <h3 class="hotels-card-title">Amara Resort & Spa</h3>
             </a>
               <span class="hotels-card-type">Гостиница</span>
@@ -172,8 +174,8 @@
             <span class="hotels-rating">Рейтинг: 8,5</span>
           </li>
           <li class="hotels-card">
-            <a class="hotels-card-link" href="#">
-              <img class="hotels-card-img" src="" alt="Мотель Desert Quail Inn">
+            <a class="hotels-card__img-link" href="#">
+              <img class="hotels-card-img" src="images/content/hotel-2.jpg" alt="Мотель Desert Quail Inn">
             </a>
             <h3 class="hotels-card-title">Desert Quail Inn</h3>
               <span class="hotels-card-type">Мотель</span>
@@ -182,8 +184,8 @@
             <span class="hotels-rating">Рейтинг: 8,9</span>
           </li>
           <li class="hotels-card">
-            <a class="hotels-card-link" href="#">
-              <img class="hotels-card-img" src="" alt="Апартаменты Villas at Poco Diablo">
+            <a class="hotels-card__img-link" href="#">
+              <img class="hotels-card-img" src="images/content/hotel-3.jpg" alt="Апартаменты Villas at Poco Diablo">
             </a>
             <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
               <span class="hotels-card-type">Апартаменты</span>
@@ -193,8 +195,8 @@
             <span class="hotels-rating">Рейтинг: 9,2</span>
           </li>
           <li class="hotels-card">
-            <a class="hotels-card-link" href="#">
-              <img class="hotels-card-img" src="" alt="Гостиница GreenTree Inn">
+            <a class="hotels-card__img-link" href="#">
+              <img class="hotels-card-img" src="images/content/hotel-4.jpg" alt="Гостиница GreenTree Inn">
               <h3 class="hotels-card-title">GreenTree Inn</h3>
             </a>
               <span class="hotels-card-type">Гостиница</span>
@@ -254,34 +256,37 @@
   </main>
 
     <footer class="page-footer">
+      <!-- соцсети -->
       <section class="socials">
         <h3 class="visually-hidden">Социальные сети</h3>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-           <a class="button" href="#">
+        <ul class="social__list">
+          <li class="social__item">
+           <a class="button__twitter" href="https://twitter.com/htmlacademy_ru">
              <span class="visually-hidden">Твиттер</span>
            </a>
           </li>
           <li class="footer-social-item">
-           <a class="button" href="#">
+           <a class="button__facebook" href="https://www.facebook.com/htmlacademy">
              <span class="visually-hidden">Фейсбук</span>
            </a>
           </li>
           <li class="footer-social-item">
-           <a class="button" href="#">
+           <a class="button__youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
              <span class="visually-hidden">Ютуб</span>
            </a>
           </li>
         </ul>
       </section>
+<!-- телефон и лого академии -->
       <section class="telephone">
-       <h3 class="visually-hidden">Телефон</h3>
-       <p class="telephone">+7 (812) 812-12-12</p>
+        <h3 class="visually-hidden">Телефон</h3>
+        <a href="tel:+78128121212" class="telephone">+7 (812) 812-12-12</a>
      </section>
+
      <section  class="academy">
        <h3 class="visually-hidden">Контакты академии</h3>
        <a href="https://htmlacademy.ru/" class="academy-link">
-       <img class="academy-img" src="" alt="logo-academy">
+       <img class="academy-img" src="images/logo_academy.svg" alt="logo-academy">
        </a>
      </section>
     </footer>
