--- a/hotels.html
+++ b/hotels.html
@@ -34,9 +34,7 @@
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">
-              <button>
-                Хочу сюда
-              </button>
+              <span class="navigation__button">Хочу сюда</span>
             </a>
           </li>
         </ul>
@@ -134,8 +132,8 @@
             до<input class="hotels__filter-input" type="number" name="max-price" value="9000">
          </label>
           </fieldset>
-        <button class="button" type="submit">Применить</button>
-        <button class="button" type="reset">Сбросить</button>
+        <button class="button__apply" type="submit">Применить</button>
+        <button class="button__reset" type="reset">Сбросить</button>
         </form>
       </div>
 
@@ -169,8 +167,8 @@
               <h3 class="hotels__card-title">Amara Resort & Spa</h3>
               <span class="hotels__card-type">Гостиница</span>
               <b class="hotels__card-price">От 4000 ₽</b>
-            <a href="#" class="hotels__card-buttom buttom">Подробнее</a>
-            <button class="button">В избранное</button>
+            <a href="#" class="hotels__card-buttom">Подробнее</a>
+            <button class="hotels__favorite">В избранное</button>
             <span class="hotels__rating">Рейтинг: 8,5</span>
           </li>
 
@@ -181,7 +179,8 @@
             <h3 class="hotels__card-title">Desert Quail Inn</h3>
               <span class="hotels__card-type">Мотель</span>
               <b class="hotels__card-price">От 3000 ₽</b>
-            <a href="#" class="hotels__card-buttom buttom">Подробнее</a>
+            <a href="#" class="hotels__card-buttom">Подробнее</a>
+            <button class="hotels__favorite">В избранное</button>
             <span class="hotels__rating">Рейтинг: 8,9</span>
           </li>
 
@@ -192,8 +191,8 @@
             <h3 class="hotels__card-title">Villas at Poco Diablo</h3>
               <span class="hotels__card-type">Апартаменты</span>
               <b class="hotels__card-price">От 2000 ₽</b>
-            <a href="#" class="hotels__card-buttom buttom">Подробнее</a>
-            <button class="button">В избранном</button>
+            <a href="#" class="hotels__card-buttom">Подробнее</a>
+            <button class="hotels__favorite-active">В избранном</button>
             <span class="hotels__rating">Рейтинг: 9,2</span>
           </li>
 
@@ -204,8 +203,8 @@
               <h3 class="hotels__card-title">GreenTree Inn</h3>
               <span class="hotels__card-type">Гостиница</span>
               <b class="hotels__card-price">От 3000 ₽</b>
-            <a href="#" class="hotels__card-buttom buttom">Подробнее</a>
-            <button class="button">В избранноe</button>
+            <a href="#" class="hotels__card-buttom">Подробнее</a>
+            <button class="hotels__favorite">В избранноe</button>
             <span class="hotels__rating">Рейтинг: 9,2</span>
           </li>
         </ul>
