--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">
-              <button>
-                Хочу сюда
-              </button>
+              <span class="navigation__button">Хочу сюда</span>
             </a>
           </li>
         </ul>
@@ -60,7 +58,7 @@
             <div class="advantage__item-city">
             <h3 class="advantage__item-title">Настоящий городок</h3>
               <p class="advantage__item-number">— №1 —</p>
-              <p class="advantage__item-description">Седона — не аттракцион для туристов, там течёт своя жизнь
+              <p class="advantage__description">Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
             </div>
 
@@ -83,7 +81,7 @@
             <div class="advantage__item-bridge">
             <h3 class="advantage__item-title">Там есть мост дьявола</h3>
               <p class="advantage__item-number">— №2 —</p>
-              <p class="advantage__item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <p class="advantage__description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
           </li>
           <li class="advantage-list">
